--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "dependencies": {
     "@koa/cors": "2",
     "aliyun-dysms-sdk": "^1.0.0",
-    "co-wechat-api": "^2.7.2",
     "crypto": "^1.0.1",
     "httpx": "^2.1.2",
     "jsmediatags": "^3.8.1",
@@ -20,6 +19,7 @@
     "koa-jwt": "^3.2.2",
     "limax": "^1.6.0",
     "lodash": "^4.17.4",
+    "mime-types": "^2.1.18",
     "moment": "^2.19.1",
     "mp3-duration": "^1.1.0",
     "musicmetadata": "^2.0.5",
@@ -39,9 +39,6 @@
     "think-pagination": "^2.0.0",
     "think-session": "^1.0.0",
     "think-session-file": "^1.0.5",
-    "think-swagger-controller": "^1.0.3",
-    "think-swagger-parser": "^1.0.2",
-    "think-swagger-router": "^1.0.0",
     "think-view": "^1.0.0",
     "think-view-nunjucks": "^1.0.1",
     "thinkjs": "^3.0.0",
