--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "think-model": "^1.0.0",
     "think-model-mysql": "^1.0.0",
     "think-pagination": "^2.0.0",
+    "think-payload": "^1.3.1",
     "think-session": "^1.0.0",
     "think-session-file": "^1.0.5",
     "think-view": "^1.0.0",
