--- a/nginx.conf
+++ b/nginx.conf
@@ -1,30 +1,58 @@
+
 server {
-    listen 80;
-    server_name example.com www.example.com;
-    root /Users/basil/__/workspace/_myspace/picker-master/www;
-    set $node_port 8360;
+  listen      [::]:80;
+  listen      80;
+  server_name api.caixie.top;
+  access_log  /var/log/nginx/caixie-access.log;
+  error_log   /var/log/nginx/caixie-error.log;
 
-    index index.js index.html index.htm;
-    if ( -f $request_filename/index.html ){
-        rewrite (.*) $1/index.html break;
-    }
-    if ( !-f $request_filename ){
-        rewrite (.*) /index.js;
-    }
-    location = /index.js {
-        proxy_http_version 1.1;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $http_host;
-        proxy_set_header X-NginX-Proxy true;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        proxy_pass http://127.0.0.1:$node_port$request_uri;
-        proxy_redirect off;
-    }
+  return 301 https://$host:443$request_uri;
 
-    location ~ /static/ {
-        etag         on;
-        expires      max;
-    }
 }
+
+server {
+  listen      [::]:443 ssl ;
+  listen      443 ssl ;
+
+  server_name console.caixie.top zy.caixie.top;
+  access_log  /var/log/nginx/caixie-access.log;
+  error_log   /var/log/nginx/caixie-error.log;
+
+  ssl_certificate     /home/caixie/caixie-client/tls/server.crt;
+  ssl_certificate_key /home/caixie/caixie-client/tls/server.key;
+  ssl_protocols       TLSv1.2;
+  ssl_prefer_server_ciphers on;
+
+  keepalive_timeout   70;
+
+  proxy_cache VUEJS;
+  proxy_cache_valid 200 1d;
+  proxy_set_header X-Forwarded-Proto $scheme;
+
+  expires 1M;
+  add_header Pragma public;
+  add_header Cache-Control "public, must-revalidate, proxy-revalidate";
+
+  location / {
+    proxy_pass http://caixie-5000;
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "upgrade";
+    proxy_set_header Host $http_host;
+    proxy_set_header X-Real-IP $remote_addr;
+    # proxy_set_header X-Nginx-Proxy true;
+    # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    # proxy_set_header X-Forwarded-Proto $scheme;
+    # proxy_set_header X-Forwarded-For $remote_addr;
+    # proxy_set_header X-Forwarded-Port $server_port;
+    # proxy_set_header X-Request-Start $msec;
+    # proxy_redirect off;
+  }
+
+}
+
+upstream caixie-5000 {
+
+  server 127.0.0.1:5000;
+}
+
