--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   },
   "dependencies": {
     "@koa/cors": "2",
+    "ali-oss": "^5.2.0",
     "aliyun-dysms-sdk": "^1.0.0",
     "crypto": "^1.0.1",
+    "fs-extra": "^7.0.0",
     "httpx": "^2.1.2",
     "jsmediatags": "^3.8.1",
     "jsonwebtoken": "^8.1.0",
     "kcors": "^2.2.1",
     "koa-jwt": "^3.2.2",
+    "ldapjs": "^1.0.2",
     "limax": "^1.6.0",
     "lodash": "^4.17.4",
     "mime-types": "^2.1.18",
@@ -38,12 +41,14 @@
     "think-model-mysql": "^1.0.0",
     "think-pagination": "^2.0.0",
     "think-payload": "^1.3.1",
+    "think-router-rest": "^1.0.4",
     "think-session": "^1.0.0",
     "think-session-file": "^1.0.5",
     "think-view": "^1.0.0",
     "think-view-nunjucks": "^1.0.1",
     "thinkjs": "^3.0.0",
-    "transliteration": "^1.6.2"
+    "transliteration": "^1.6.2",
+    "upyun": "^3.3.4"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
