--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@koa/cors": "2",
     "ali-oss": "^5.2.0",
     "aliyun-dysms-sdk": "^1.0.0",
+    "apollo-server-core": "^2.0.0",
     "crypto": "^1.0.1",
     "fs-extra": "^7.0.0",
+    "graphql": "^0.13.2",
+    "graphql-tools": "^3.0.5",
     "httpx": "^2.1.2",
     "jsmediatags": "^3.8.1",
     "jsonwebtoken": "^8.1.0",
