update docker-compose to dev branch

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,8 +59,8 @@ services:
       - "traefik.frontend.headers.STSPreload=true"
     volumes:
       - ./:/app
-    command: ["node", "/app/production.js"]
-#    command: ["node", "/app/development.js"]
+#    command: ["node", "/app/production.js"]
+    command: ["node", "/app/development.js"]
     depends_on:
       - mysql
       - redis
