--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "helmet": "^3.16.0",
     "js-base64": "^2.5.1",
     "mysql": "^2.17.0",
+    "nestjs-typeorm-paginate": "^0.1.1",
     "node-schedule": "^1.3.2",
     "passport": "^0.4.0",
     "passport-http-bearer": "^1.0.1",
