--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "scripts": {
     "core:watch": "concurrently -n tsc,gulp \"cd packages/core && yarn tsc:watch\" \"cd packages/core && yarn gulp:watch\"",
     "bootstrap": "lerna bootstrap",
+    "docs:watch": "concurrently -n docgen,hugo,webpack -c green,blue,cyan \"cd docs && hugo server\" \"cd docs && yarn webpack -w\"",
+    "docs:build": "cd docs && yarn webpack --prod && node build.js && hugo",
+    "docs:deploy": "cd docs && yarn && cd .. && yarn docs:build",
     "build": "lerna run build",
     "publish:packages": "yarn build && lerna publish --exact -m \"chore: Publish %s release\" --no-git-tag-version"
   },
