--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "@podcast/core",
+  "name": "@mpcast/core",
   "version": "0.1.0-alpha.1",
-  "description": "A Miniprogram podcast server.",
+  "description": "A Mini Program cast server.",
   "author": "Baisheng <baisheng@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "lint": "tslint --project tsconfig.json -c tslint.json"
+    "lint": "tslint --project tsconfig.json -c tslint.json",
+    "tsc:watch": "tsc -p ./build/tsconfig.build.json --watch",
+    "build": "rimraf dist && tsc -p ./build/tsconfig.build.json && tsc -p ./build/tsconfig.cli.json",
+    "publish:alpha": "yarn build && npm publish --access public --tag alpha"
   },
   "dependencies": {
     "@nestjs/common": "^6.0.0",
@@ -15,6 +18,7 @@
     "@nestjs/platform-express": "^6.0.0",
     "@nestjs/swagger": "^3.0.2",
     "@nestjs/typeorm": "^6.0.0",
+    "@types/helmet": "^0.0.43",
     "akismet-api": "^4.2.0",
     "bcrypt": "^3.0.6",
     "cache-manager": "^2.9.0",
@@ -26,7 +30,7 @@
     "geoip-lite": "^1.3.7",
     "helmet": "^3.16.0",
     "js-base64": "^2.5.1",
-    "mysql": "^2.17.0",
+    "nanoid": "^2.0.1",
     "nestjs-typeorm-paginate": "^0.1.1",
     "node-schedule": "^1.3.2",
     "passport": "^0.4.0",
@@ -45,15 +49,20 @@
   "devDependencies": {
     "@nestjs/testing": "^6.0.0",
     "@types/bcrypt": "^3.0.0",
+    "@types/compression": "^0.0.36",
     "@types/express": "^4.16.0",
+    "@types/fs-extra": "^5.0.5",
     "@types/jest": "^23.3.13",
     "@types/lodash": "^4.14.123",
+    "@types/nanoid": "^1.2.1",
     "@types/node": "^10.12.18",
     "@types/supertest": "^2.0.7",
     "jest": "^23.6.0",
     "lerna": "^3.13.2",
+    "mysql": "^2.17.1",
     "nodemon": "^1.18.9",
     "prettier": "^1.15.3",
+    "rimraf": "^2.6.3",
     "supertest": "^3.4.1",
     "ts-jest": "^23.10.5",
     "ts-node": "^7.0.1",
