--- a/packages/create/package.json
+++ b/packages/create/package.json
@@ -28,5 +28,6 @@
     "prompts": "^2.0.4",
     "rxjs": "^6.5.1",
     "semver": "^6.0.0"
-  }
+  },
+  "gitHead": "b53387205e28493f9cfa99e7c51e6fbcaa8f561e"
 }
