--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,36 +35,36 @@ services:
       - mysql_vol:/var/lib/mysql
     networks:
       - db
-  caixie.love_api:
+#  caixie.love_api:
 #    tty: true
 #    stdin_open: true
 #    image: mhart/alpine-node
-    build: .
-    expose:
-      - 5000
-    networks:
-      - traefik
-      - db
-    labels:
-      - "traefik.backend=caixie.love_api"
-      - "traefik.docker.network=traefik"
-      - "traefik.enable=true"
-      - "traefik.passHostHeader=true"
-      - "traefik.frontend.priority=11"
-      - "traefik.port=5000"
-      - "traefik.frontend.entryPoints=https,http"
-      - "traefik.frontend.rule=Host:api.caixie.top"
-      - "traefik.frontend.headers.customResponseHeaders=Access-Control-Allow-Origin:*"
-      - "traefik.frontend.headers.STSSeconds=315360000"
-      - "traefik.frontend.headers.STSIncludeSubdomains=true"
-      - "traefik.frontend.headers.STSPreload=true"
-    volumes:
-      - ./:/app
-    command: ["node", "/app/production.js"]
+#    build: .
+#    expose:
+#      - 5000
+#    networks:
+#      - traefik
+#      - db
+#    labels:
+#      - "traefik.backend=caixie.love_api"
+#      - "traefik.docker.network=traefik"
+#      - "traefik.enable=true"
+#      - "traefik.passHostHeader=true"
+#      - "traefik.frontend.priority=11"
+#      - "traefik.port=5000"
+#      - "traefik.frontend.entryPoints=https,http"
+#      - "traefik.frontend.rule=Host:api.caixie.top"
+#      - "traefik.frontend.headers.customResponseHeaders=Access-Control-Allow-Origin:*"
+#      - "traefik.frontend.headers.STSSeconds=315360000"
+#      - "traefik.frontend.headers.STSIncludeSubdomains=true"
+#      - "traefik.frontend.headers.STSPreload=true"
+#    volumes:
+#      - ./:/app
+#    command: ["node", "/app/production.js"]
 #    command: ["node", "/app/development.js"]
-    depends_on:
-      - mysql
-      - redis
+#    depends_on:
+#      - mysql
+#      - redis
 volumes:
   mysql_vol:
   redis-vol:
