--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0-alpha.1",
   "private": true,
   "scripts": {
-    "core:watch": "concurrently -n tsc,gulp \"cd packages/core && yarn tsc:watch\" \"cd packages/core && yarn gulp:watch\"",
+    "core:watch": "concurrently -n tsc,gulp,common \"cd packages/core && yarn tsc:watch\" \"cd packages/core && yarn gulp:watch\" \"cd packages/common && yarn watch\"",
     "bootstrap": "lerna bootstrap",
     "docs:watch": "concurrently -n docgen,hugo,webpack -c green,blue,cyan \"cd docs && hugo server\" \"cd docs && yarn webpack -w\"",
     "docs:build": "cd docs && yarn webpack --prod && node build.js && hugo",
@@ -38,7 +38,6 @@
     "tslint": "^5.16.0",
     "typescript": "^3.2.4"
   },
-  "repository": "git@github.com:caixie-ltd/podcast-server.git",
   "workspaces": [
     "packages/*"
   ]
