--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -9,9 +9,14 @@
     "graphql",
     "typescript"
   ],
-  "author": "Baisheng <baisheng@gmail.com>",
+  "author": {
+    "name": "Caixie Team",
+    "email": "hello@caixie.top",
+    "url": "https://mpcast.caixie.top"
+  },
   "private": false,
   "license": "MIT",
+
   "scripts": {
     "lint": "tslint --project tsconfig.json -c tslint.json",
     "tsc:watch": "tsc -p ./build/tsconfig.build.json --watch",
