--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -18,6 +18,7 @@
     "typescript": "^3.4.5"
   },
   "devDependencies": {
+    "@graphql-codegen/typescript-compatibility": "^1.1.3",
     "rimraf": "^2.6.3"
   },
   "gitHead": "1d8186dc88236b349e84531ae3bd0f3287895f69"
