--- a/packages/create/package.json
+++ b/packages/create/package.json
@@ -13,6 +13,7 @@
     "build": "yarn copy-assets && rimraf lib && tsc -p ./tsconfig.build.json"
   },
   "devDependencies": {
+    "@graphql-codegen/typescript-compatibility": "^1.1.3",
     "@types/fs-extra": "^5.0.5",
     "@types/handlebars": "^4.1.0",
     "@types/listr": "^0.13.0",
