--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -36,6 +36,7 @@
   "dependencies": {
     "@nestjs/common": "^6.0.0",
     "@nestjs/core": "^6.0.0",
+    "@nestjs/graphql": "^6.0.5",
     "@nestjs/jwt": "^6.0.0",
     "@nestjs/passport": "^6.0.0",
     "@nestjs/platform-express": "^6.0.0",
@@ -53,6 +54,10 @@
     "compression": "^1.7.4",
     "csurf": "^1.9.0",
     "geoip-lite": "^1.3.7",
+    "graphql": "^14.3.0",
+    "graphql-compose": "^7.0.1",
+    "graphql-tools": "^4.0.4",
+    "graphql-type-json": "^0.3.0",
     "helmet": "^3.16.0",
     "js-base64": "^2.5.1",
     "nanoid": "^2.0.1",
@@ -77,6 +82,7 @@
     "@types/compression": "^0.0.36",
     "@types/express": "^4.16.0",
     "@types/fs-extra": "^5.0.5",
+    "@types/graphql-type-json": "^0.1.3",
     "@types/jest": "^23.3.13",
     "@types/js-base64": "^2.3.1",
     "@types/lodash": "^4.14.123",
