--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -53,6 +53,7 @@
     "class-validator": "^0.9.1",
     "compression": "^1.7.4",
     "csurf": "^1.9.0",
+    "express-rate-limit": "^3.5.1",
     "geoip-lite": "^1.3.7",
     "graphql": "^14.3.0",
     "graphql-compose": "^7.0.1",
